--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="blockLook">
-        <img id="img" src="Geige.png" alt="geige">
+        <img id="img" src=" images/Geige.png" alt="geige">
         <div id="header">
             <h1>Platz für LOGO</h1>
         </div>
