--- a/Unterricht.html
+++ b/Unterricht.html
@@ -16,6 +16,7 @@
 <body>
 
 <header>
+    <p>Hallo Welt</p>
         <div class="img"><img src="geige.png" alt="geige"></div>
         <div id="header">
             <h1>Private Musikschule T&uuml;bingen</h1>
@@ -31,26 +32,26 @@
   <div id="kinderU" align="center">
   <h2>Unterricht f&uuml;r Kinder</h2> 
   <p class="unterrichtT">Den Einstieg in die Welt der Musik auf spielerische, 
-  ganzheitliche Weise ermöglichen: Das ist das Ziel der Angebote im Elementarbereich. 
-  Er umfasst die Fächer „Rhythmik in Begleitung“ ab einem Jahr und „Elementare Musikerziehung“ für Kinder, 
+  ganzheitliche Weise ermï¿½glichen: Das ist das Ziel der Angebote im Elementarbereich. 
+  Er umfasst die Fï¿½cher ï¿½Rhythmik in Begleitungï¿½ ab einem Jahr und ï¿½Elementare Musikerziehungï¿½ fï¿½r Kinder, 
   die in einem oder in zwei Jahren eingeschult werden.
-Daran schließt sich der Orientierungsbereich für Grundschulkinder an. 
-Hier können Kinder im Instrumentenkarussell alle Instrumentalgruppen kennenlernen, 
-einzelne Grundkurse für Blockflöte oder Trommeln oder die Holz- und Blechbläservorschule besuchen.
- Bei der Vergabe freier Plätze im Instrumentalunterricht werden diejenigen Schülerinnen und Schüler vorrangig berücksichtigt, 
+Daran schlieï¿½t sich der Orientierungsbereich fï¿½r Grundschulkinder an. 
+Hier kï¿½nnen Kinder im Instrumentenkarussell alle Instrumentalgruppen kennenlernen, 
+einzelne Grundkurse fï¿½r Blockflï¿½te oder Trommeln oder die Holz- und Blechblï¿½servorschule besuchen.
+ Bei der Vergabe freier Plï¿½tze im Instrumentalunterricht werden diejenigen Schï¿½lerinnen und Schï¿½ler vorrangig berï¿½cksichtigt, 
  die einen Grundkurs an der Musikschule besucht haben.</p>
   
   </div>
   
   <div id="erwachsenU" align="center">
   <h2>Unterricht f&uuml;r Erwachsene</h2>
-  <p class="unterrichtT">Musizieren auch im Erwachsenenalter oder als Senior – das bringt Lebensqualität und Freude. 
-  An der Tübinger Musikschule lässt sich dieser lang gehegte Traum erfüllen. 
-  Erwachsene erhalten modernen und individuell auf ihre Bedürfnisse zugeschnittenen Instrumentalunterricht.
-  Ein variables Baustein-System ermöglicht es, kleine musikalische Inseln mühelos in den Wochenplan zu integrieren. 
-  Der Unterricht kann mit der Lehrerin oder dem Lehrer flexibel organisiert werden, zum Beispiel 14-tägig mit jeweils 40 Minuten Unterricht.
-  Die kleinste wöchentliche Unterrichtseinheit beträgt 20 Minuten.
-  Auch gemeinsames Musizieren ist für Erwachsene möglich. Ob klassisches Orchester, 
+  <p class="unterrichtT">Musizieren auch im Erwachsenenalter oder als Senior ï¿½ das bringt Lebensqualitï¿½t und Freude. 
+  An der Tï¿½binger Musikschule lÃ¤sst sich dieser lang gehegte Traum erfï¿½llen. 
+  Erwachsene erhalten modernen und individuell auf ihre Bedï¿½rfnisse zugeschnittenen Instrumentalunterricht.
+  Ein variables Baustein-System ermï¿½glicht es, kleine musikalische Inseln mï¿½helos in den Wochenplan zu integrieren. 
+  Der Unterricht kann mit der Lehrerin oder dem Lehrer flexibel organisiert werden, zum Beispiel 14-tï¿½gig mit jeweils 40 Minuten Unterricht.
+  Die kleinste wï¿½chentliche Unterrichtseinheit betrï¿½gt 20 Minuten.
+  Auch gemeinsames Musizieren ist fï¿½r Erwachsene mï¿½glich. Ob klassisches Orchester, 
   Big Band oder kleines Kammerensemble: Das Zusammenspiel mit anderen macht besonders viel Freude. 
   Die Musikschule hilft bei der Suche oder Zusammenstellung des passenden Ensembles.,</p>
   
@@ -59,14 +60,14 @@ einzelne Grundkurse für Blockflöte oder Trommeln oder die Holz- und Blechbläserv
   
   <div id="gesangU" align="center">
   <h2>Gesangsunterricht</h2>
-  <p>Singen ist eine erfüllende Tätigkeit. Schön singen kann man größtenteils lernen – auch, 
-  wie man mit dem Körper und der Atmung umgeht. Sogar eine scheinbar schwache oder heisere Stimme 
-  kann sich durch richtiges Training in eine voluminöse Stimme verwandeln. Dabei wird nicht nur die Singstimme wachsen, 
+  <p>Singen ist eine erfï¿½llende Tï¿½tigkeit. Schï¿½n singen kann man grï¿½ï¿½tenteils lernen ï¿½ auch, 
+  wie man mit dem Kï¿½rper und der Atmung umgeht. Sogar eine scheinbar schwache oder heisere Stimme 
+  kann sich durch richtiges Training in eine voluminï¿½se Stimme verwandeln. Dabei wird nicht nur die Singstimme wachsen, 
   sondern auch die Sprechstimme freier, klarer und lauter werden.
-   Richtige Körperhaltung und gesunde Atmung bilden die Grundvoraussetzungen für die Kunst des Gesanges. 
-   Beides wird zusammen mit einer korrekten Sprech- und Gesangstechnik anhand von Übungen erlernt. 
+   Richtige Kï¿½rperhaltung und gesunde Atmung bilden die Grundvoraussetzungen fï¿½r die Kunst des Gesanges. 
+   Beides wird zusammen mit einer korrekten Sprech- und Gesangstechnik anhand von ï¿½bungen erlernt. 
    Die Gesangsliteratur erstreckt sich von der Renaissance bis zur Moderne. Das wichtigste Ziel ist es, 
-   Spaß am Singen und Freude im Umgang mit der Stimme zu wecken. Empfohlenes Ergänzungsfach ist Gehörbildung. 
+   Spaï¿½ am Singen und Freude im Umgang mit der Stimme zu wecken. Empfohlenes Ergï¿½nzungsfach ist Gehï¿½rbildung. 
    Das Spielen eines Instruments ist eine gute Voraussetzung und erleichtert das Einstudieren der Gesangsliteratur.
   
   </p>
