--- a/Formula.html
+++ b/Formula.html
@@ -27,6 +27,9 @@
                 <label for="last">Nachname</label>
                 <input id="last" type="text" />
                 <br>
+                <label for="birthday">Gegurtsdatum</label>
+                <input id="birthday" type="date" />
+                <br>
             </form>
         </div>
     </main>
