--- a/Startseite.html
+++ b/Startseite.html
@@ -14,7 +14,7 @@
             <h1>Platz für LOGO</h1>
         </div>
         <nav id="menu">
-            <a href="">Start</a> <a href="">Instromente</a> <a href="">untericht</a> <a href="">Kontakte</a>
+            <a href="">Start</a> <a href="">Instrumente</a> <a href="">Unterricht</a> <a href="">Kontakte</a>
         </nav>
     </header>
     <main>
