--- a/Instrument Akkordeon.html
+++ b/Instrument Akkordeon.html
@@ -18,7 +18,7 @@
             <h1>Private Musikschule T&uuml;bingen</h1>
         </div>
         <nav class="menu">
-            <a href="">Start</a> <a href="">Instrumente</a> <a href="">Unterricht</a> <a href="">Kontakt</a>
+            <a href="Startseite.html">Start</a> <a href="Instrumente.html">Instrumente</a> <a href="Unterricht.html">Unterricht</a> <a href="Kontakt.html">Kontakt</a>
         </nav>
     </header>
     <main>
