--- a/Kontakt.html
+++ b/Kontakt.html
@@ -14,7 +14,7 @@
             <h1>Platz fÃ¼r LOGO</h1>
         </div>
         <nav id="menu">
-            <a href="Startseite.html">Start</a> <a href="">Instromente</a> <a href="">untericht</a> <a href="">Kontakte</a>
+            <a href="Startseite.html">Start</a> <a href="Instrumente.html">Instrumente</a> <a href="Unterricht.html">Unterricht</a> <a href="Kontakt.html">Kontakt</a>
         </nav>
     </header>
     <main class="box">
