--- a/Instrument Akkordeon.html
+++ b/Instrument Akkordeon.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <div class="img"><img src="geige.png" alt="geige"></div>
+        <div class="img"><img src="images/geige.png" alt="geige"></div>
         <div id="header">
             <h1>Private Musikschule T&uuml;bingen</h1>
         </div>
@@ -32,7 +32,7 @@
 
         </nav>
         <div class="insBild">
-            <img id="akkordeon" src="akkordeon.png" border="" height="" width="" alt="" />
+            <img id="akkordeon" src="images/akkordeon.png" border="" height="" width="" alt="" />
         </div>
 
 
