--- a/Instrument Geige.html
+++ b/Instrument Geige.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-        <div class="img"><img src="geige.png" alt="geige"></div>
+        <div class="img"><img src="images/geige.png" alt="geige"></div>
         <div id="header">
             <h1>Private Musikschule T&uuml;bingen</h1>
         </div>
@@ -37,7 +37,7 @@
 
         </nav>
         <div >
-            <img id="geige" src="geige2.png" border="" height="" width="" alt="" />
+            <img id="geige" src="images/geige2.png" border="" height="" width="" alt="" />
         </div>
 
 
