--- a/Instrument Kontrabass.html
+++ b/Instrument Kontrabass.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <div class="img"><img src="geige.png" alt="geige"></div>
+        <div class="img"><img src="images/geige.png" alt="geige"></div>
         <div id="header">
             <h1>Private Musikschule T&uuml;bingen</h1>
         </div>
@@ -35,7 +35,7 @@
 
         </nav>
         <div >
-            <img id="kontrabass" src="kontrabass.png" border="" height="" width="" alt="" />
+            <img id="kontrabass" src="images/kontrabass.png" border="" height="" width="" alt="" />
         </div>
 
 
