--- a/Impressum.html
+++ b/Impressum.html
@@ -11,10 +11,10 @@
     <header class="blockLook">
         <img id="img" src="Geige.png" alt="geige">
         <div id="header">
-            <h1>Platz fÃ¼r LOGO</h1>
+            <h1>Platz für Logo</h1>
         </div>
         <nav id="menu">
-            <a href="Startseite.html">Start</a> <a href="">Instromente</a> <a href="">untericht</a> <a href="">Kontakte</a>
+            <a href="Startseite.html">Start</a> <a href="">Instrumente</a> <a href="">Unterricht</a> <a href="">Kontakte</a>
         </nav>
     </header>
     <main>
