--- a/Formula.html
+++ b/Formula.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="Formula.css">
     <title>Document</title>
 </head>
+
 <body>
     <header class="blockLook">
         <img id="img" src="Geige.png" alt="geige">
@@ -32,46 +34,46 @@
                 <br>
                 <label for="email">Email</label>
                 <input id="email" type="email" />
-                <br /> 
-                <label>Telefon Nr.</label>
-                <input id="phone" type="tel" /> <!--  10 digit number-->
-<br />
-<br />
+                <br />
+                <label for="phone">Telefon Nr.</label>
+                <input id="pho  ne" type="tel" /> <!--  10 digit number-->
+                <br>
+                <label for="gender"> Gender </label>
+                <label for="male">Male</label>
+                <input id="male" type="radio" name="gender" />
+                <label for="female">Female</label>
+                <input id="female" type="radio" name="gender" />
+                <br />
+                <br />
 
-<label> Gender </label>
-&emsp; &emsp; &emsp; &emsp; Male <input id="male" type="radio" name="gender" />
-Female <input id="female" type="radio" name="gender" />
-<br />
-<br />
+                <label> Adress </label>
+                <textarea id="area"> </textarea>
+                <br />
+                <br />
 
-<label> Adress </label>
-<textarea id="area"> </textarea>
-<br />
-<br />
+                <label> City </label>
+                <input id="city" type="text" /> (max 30 characters a-z and A-Z)
+                <br />
+                <br />
 
-<label> City </label>
-<input id="city" type="text" /> (max 30 characters a-z and A-Z)
-<br />
-<br />
+                <label> Pin Code </label>
+                <input id="pin" type="number" /> (6 digit number)
+                <br />
+                <br />
 
-<label> Pin Code </label>
-<input id="pin" type="number"/> (6 digit number)
-<br />
-<br />
+                <label> State </label>
+                <input id="State" type="text" /> (max 30 characters a-z and A-Z)
+                <br />
+                <br />
 
-<label> State </label>
-<input id="State" type="text" /> (max 30 characters a-z and A-Z)
-<br />
-<br />
+                <label> Country </label>
+                <input id="country" type="text" />
+                <br />
+                <br />
 
-<label> Country </label>
-<input id="country" type="text" />
-<br />
-<br />
-
-<div id="buttons">
-<input type="submit" />
-<input type="reset" />
+                <div id="buttons">
+                    <input type="submit" />
+                    <input type="reset" />
             </form>
         </div>
     </main>
@@ -79,4 +81,5 @@ Female <input id="female" type="radio" name="gender" />
         <a href="impressum.html">Impressum</a>
     </footer>
 </body>
+
 </html>
