--- a/Startseite.html
+++ b/Startseite.html
@@ -28,7 +28,7 @@
             Wir freuen uns auf sie.
         </p>
     </div>
-        <img id="KlavierKreis" class="blockLook MainLook" style="box-shadow: none;" src="dasbesere.jpg" alt="Hey du arsch">
+        <img id="KlavierKreis" class="blockLook MainLook" style="box-shadow: none;" src="Startseite Bild.jpg" alt="Hey du arsch">
         <div id="Information" class="MainLook">
             <lo>
                 <h4>Öffnungszeiten:</h4>
