--- a/Startseite.html
+++ b/Startseite.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="blockLook">
-        <img id="LogoBild" src="Geige.png" alt="geige">
+        <img id="LogoBild" src="images/Geige.png" alt="geige">
         <div id="header">
             <h1>Platz für LOGO</h1>
         </div>
