--- a/Unterricht.html
+++ b/Unterricht.html
@@ -39,7 +39,9 @@
   Hier k&ouml;nnen Kinder im Instrumentenkarussell alle Instrumentalgruppen kennenlernen, 
   einzelne Grundkurse f&uuml;r Blockfl&ouml;te oder Trommeln oder die Holz- und Blechbl&auml;servorschule besuchen.
   Bei der Vergabe freier Pl&auml;tze im Instrumentalunterricht werden diejenigen Sch&uuml;lerinnen und Sch&uuml;ler vorrangig ber&uuml;cksichtigt, 
-  die einen Grundkurs an der Musikschule besucht haben.</p>
+  die einen Grundkurs an der Musikschule besucht haben.
+  <a class="Ubutton" href="Unterricht.html">Unterricht</a>
+  </p>
   
   </div>
   
