--- a/Startseite.html
+++ b/Startseite.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header class="blockLook">
-        <img id="LogoBild" src="images/Geige.png" alt="geige">
+        <img id="img" src="images/Geige.png" alt="geige">
         <div id="header">
-            <h1>Platz für LOGO</h1>
+            <h1>Musikschule Thübingen</h1>
         </div>
         <nav id="menu">
             <a href="Startseite.html">Start</a> <a href="Instrumente.html">Instrumente</a> <a href="Unterricht.html">Unterricht</a> <a href="Kontakt.html">Kontakt</a>
