--- a/Impressum.html
+++ b/Impressum.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header class="blockLook">
-        <img id="img" src="Geige.png" alt="geige">
+        <img id="img" src="images/Geige.png" alt="geige">
         <div id="header">
-            <h1>Platz für Logo</h1>
+            <h1>Musikschule Thübingen</h1>
         </div>
         <nav id="menu">
             <a href="Startseite.html">Start</a> <a href="">Instrumente</a> <a href="">Unterricht</a> <a href="">Kontakte</a>
@@ -39,7 +39,7 @@ Musterstra&szlig;e 110<br />
  <!--<p>Quelle: <a href="https://www.e-recht24.de">eRecht24</a></p>-->
     </main>
     <footer class="blockLook">
-        <a href="impressum.html">Impressum</a>
+        <a href="impressum.html">Impressum</a> <a href="Datenschutz.html">Datenschutz </a>
     </footer>
 </body>
 </html>
