--- a/Instrument Trompete.html
+++ b/Instrument Trompete.html
@@ -4,7 +4,7 @@
 <head>
     <title>Instrument Trompete</title>
 
-    <meta charset="ISO-8859-1">
+    <meta charset="UTF-8">
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="keywords" content="">
