--- a/Startseite.html
+++ b/Startseite.html
@@ -44,7 +44,7 @@
     </main>
     
     <footer class="blockLook">
-        <small><a href="impressum.html">Impressum</a></small>
+        <small><a href="impressum.html">Impressum</a><a href="Datenschutz.html">Datenschutz</a></small>
     </footer>
 </body>
 </html>
