--- a/Unterricht.html
+++ b/Unterricht.html
@@ -72,7 +72,7 @@
   
   </div>
   
-  <div id="gesangU" >
+  <div id="gesangU"  align="center">
   <h2>Gesangsunterricht</h2>
   <p>Singen ist eine erf&uuml;llende Tätigkeit. Sch&ouml;n singen kann man gr&ouml;&szlig;tenteils lernen &ndash; auch, 
   wie man mit dem K&ouml;rper und der Atmung umgeht. Sogar eine scheinbar schwache oder heisere Stimme 
@@ -83,7 +83,11 @@
    Die Gesangsliteratur erstreckt sich von der Renaissance bis zur Moderne. Das wichtigste Ziel ist es, 
    Spa&szlig; am Singen und Freude im Umgang mit der Stimme zu wecken. Empfohlenes Ergänzungsfach ist Geh&ouml;rbildung. 
    Das Spielen eines Instruments ist eine gute Voraussetzung und erleichtert das Einstudieren der Gesangsliteratur.
-  
+  <br />
+  <br />
+  <br />
+
+  <a class="Ubutton" href="Unterricht.html"><b>Direkt zum Unterricht </b></a>
   </p>
   
   </div>
