--- a/Formula.html
+++ b/Formula.html
@@ -35,46 +35,40 @@
                 <label for="email">Email</label>
                 <input id="email" type="email" />
                 <br />
-                <label for="phone">Telefon Nr.</label>
-                <input id="pho  ne" type="tel" /> <!--  10 digit number-->
+                <label for="phone">Telefon</label>
+                <input id="phone" type="tel" /> <!--  10 digit number-->
                 <br>
                 <label for="gender"> Gender </label>
-                <label for="male">Male</label>
                 <input id="male" type="radio" name="gender" />
-                <label for="female">Female</label>
+                <label for="male">Male</label>
                 <input id="female" type="radio" name="gender" />
+                <label for="female">Female</label>
                 <br />
+                <label for="address">Adresse</label>
+                <textarea id="address"> </textarea>
                 <br />
 
-                <label> Adress </label>
-                <textarea id="area"> </textarea>
-                <br />
-                <br />
 
                 <label> City </label>
-                <input id="city" type="text" /> (max 30 characters a-z and A-Z)
-                <br />
+                <input id="city" type="text" />
                 <br />
 
                 <label> Pin Code </label>
-                <input id="pin" type="number" /> (6 digit number)
+                <input id="pin" type="number" />
                 <br />
-                <br />
-
                 <label> State </label>
-                <input id="State" type="text" /> (max 30 characters a-z and A-Z)
-                <br />
+                <input id="State" type="text" /> 
                 <br />
 
                 <label> Country </label>
                 <input id="country" type="text" />
                 <br />
-                <br />
 
                 <div id="buttons">
                     <input type="submit" />
                     <input type="reset" />
-            </form>
+                </div>
+                        </form>
         </div>
     </main>
     <footer class="blockLook">
