--- a/Unterricht.html
+++ b/Unterricht.html
@@ -45,7 +45,7 @@
   <br />
   <br />
 
-  <a class="Ubutton" href="Unterricht.html"><b>Direkt zum Unterricht </b></a>
+  <a class="Ubutton" href="Unterricht.html"><b>Unterricht Buchen</b></a>
   </p>
   
   </div>
@@ -65,7 +65,7 @@
   <br />
   <br />
 
-  <a class="Ubutton" href="Unterricht.html"><b>Direkt zum Unterricht </b></a>
+  <a class="Ubutton" href="Unterricht.html"><b>Unterricht Buchen</b></a>
 
   </p>
   
@@ -87,7 +87,7 @@
   <br />
   <br />
 
-  <a class="Ubutton" href="Unterricht.html"><b>Direkt zum Unterricht </b></a>
+  <a class="Ubutton" href="Unterricht.html"><b>Unterricht Buchen</b></a>
   </p>
   
   </div>
