--- a/Unterricht.html
+++ b/Unterricht.html
@@ -93,8 +93,8 @@
   </div>
 
       
-    <footer>
-        <h1>Mein fu&szlig;bereich</h1>
-    </footer>
+  <footer class="blockLook">
+    <small><a href="impressum.html">Impressum</a> <a href="Datenschutz.html">Datenschutz</a></small>
+</footer>
 </body>
 </html>
