--- a/Impressum.html
+++ b/Impressum.html
@@ -39,7 +39,7 @@ Musterstra&szlig;e 110<br />
  <!--<p>Quelle: <a href="https://www.e-recht24.de">eRecht24</a></p>-->
     </main>
     <footer class="blockLook">
-        <a href="impressum.html">Impressum</a> <a href="Datenschutz.html">Datenschutz </a>
+        <small><a href="impressum.html">Impressum</a> <a href="Datenschutz.html">Datenschutz</a></small>
     </footer>
 </body>
 </html>
