--- a/Unterricht.html
+++ b/Unterricht.html
@@ -91,7 +91,7 @@
   </p>
   
   </div>
-
+    </main>
       
   <footer class="blockLook">
     <small><a href="impressum.html">Impressum</a> <a href="Datenschutz.html">Datenschutz</a></small>
