--- a/Insturment Klavir.html
+++ b/Insturment Klavir.html
@@ -73,8 +73,8 @@
 
 
     </main>
-    <footer>
-        <h1>Mein fu&szlig;bereich</h1>
+    <footer class="blockLook">
+        <small><a href="impressum.html">Impressum</a> <a href="Datenschutz.html">Datenschutz</a></small>
     </footer>
 </body>
 </html>
