--- a/Impressum.html
+++ b/Impressum.html
@@ -14,7 +14,7 @@
             <h1>Musikschule Thübingen</h1>
         </div>
         <nav id="menu">
-            <a href="Startseite.html">Start</a> <a href="">Instrumente</a> <a href="">Unterricht</a> <a href="">Kontakte</a>
+            <a href="Startseite.html">Start</a> <a href="Instrumente.html">Instrumente</a> <a href="Untterricht.html">Unterricht</a> <a href="Kontakt.html">Kontakte</a>
         </nav>
     </header>
     <main>
