--- a/Kontakt.html
+++ b/Kontakt.html
@@ -35,7 +35,7 @@
         
     </main>
     <footer class="blockLook">
-        <small><a href="impressum.html">Impressum</a> <a href="Datenschutz.html">Datenschutz</a></small>
+        <small><a href="Impressum.html">Impressum</a> <a href="Datenschutz.html">Datenschutz</a></small>
     </footer>
 </body>
 </html>
