--- a/Formula kinder.html
+++ b/Formula kinder.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Formula.css">
+    <link rel="stylesheet" href="Formula kinder.css">
     <title>Document</title>
 </head>
 
@@ -57,6 +57,25 @@
                 <input type="text" /> 
                 <br />
                 <br />
+                <label for="instrument">Instrument</label>
+                <select id="instrument" name="instrument">
+                    <option value="Gitarre">Gitarre</option>
+                    <option value="Klavir">Klavir</option>
+                    <option value="Geige">Geige</option>
+                    <option value="Akkordeon">Akkordeon</option>
+                    <option value="Trompete">Trompete</option>
+                    <option value="Kontrabass">Kontrabass</option>
+                  </select>
+                  <br />
+                  <br />
+                  <label for="uhrzeit">Dauer</label>
+                  <select id="uhrzeit" name="uhrzeit">
+                      <option value="45m">45 Minuten</option>
+                      <option value="60m">60 Minuten</option>
+                      <option value="90m">90 Minuten</option>
+                    </select>
+                    <br />
+                    <br />
 
                 <label for="frage">Weitere Anmerkungen</label>
                 <textarea></textarea>
