--- a/Formula.html
+++ b/Formula.html
@@ -54,12 +54,24 @@
                 <br />
                 <br />
                 <label for="address">Adresse</label>
-                <input type="text" /> 
+                <input id="adress" type="text" /> 
                 <br />
                 <br />
-
+                <label for="instrument">Instrument</label>
+                <select id="instrument" name="instrument">
+                    <option value="Gitarre">Gitarre</option>
+                    <option value="Klavir">Klavir</option>
+                    <option value="Geige">Geige</option>
+                    <option value="Akkordeon">Akkordeon</option>
+                    <option value="Trompete">Trompete</option>
+                    <option value="Kontrabass">Kontrabass</option>
+                  </select>
+                <br />
+                <br />
+                <br />
+               
                 <label for="frage">Weitere Anmerkungen</label>
-                <textarea></textarea>
+                <textarea id="frage"></textarea>
                 <br />
                 <br />
                 <br />
