--- a/Startseite.html
+++ b/Startseite.html
@@ -11,7 +11,7 @@
     <header class="blockLook">
         <img id="img" src="images/Geige.png" alt="geige">
         <div id="header">
-            <h1>Musikschule Thübingen</h1>
+            <h1>Private Musikschule Tübingen</h1>
         </div>
         <nav id="menu">
             <a href="Startseite.html">Start</a> <a href="Instrumente.html">Instrumente</a> <a href="Unterricht.html">Unterricht</a> <a href="Kontakt.html">Kontakt</a>
