--- a/Impressum.html
+++ b/Impressum.html
@@ -39,7 +39,13 @@ Musterstra&szlig;e 110<br />
  <!--<p>Quelle: <a href="https://www.e-recht24.de">eRecht24</a></p>-->
     </main>
     <footer class="blockLook">
+        
+        <div id="text">
+        <p>Tierarzt Praxis Thübingen</p> 
+        <p>Telefon: +49 (0) 123 44 55 66</p>
+        <p>Adresse: Hans-Oster-Straße 15A30502 Tübingen</p>
         <small><a href="impressum.html">Impressum</a> <a href="Datenschutz.html">Datenschutz</a></small>
+    </div>
     </footer>
 </body>
 </html>
