--- a/Formula kontakt.html
+++ b/Formula kontakt.html
@@ -24,7 +24,7 @@
     </header>
     <main>
         <div id="form" class="blockLook">
-            <h2> Anmeldung für den Gesangsunterricht</h2>
+            <h2>Kontaktaufnahme</h2>
             <form action="mailto:...">
                 <label for="first">Vorname</label>
                 <input id="first" type="text" />
@@ -34,48 +34,18 @@
                 <input id="last" type="text" />
                 <br />
                 <br />
-                <label for="birthday">Gegurtsdatum</label>
-                <input id="birthday" type="date" />
-                <br />
-                <br />
                 <label for="email">Email</label>
                 <input id="email" type="email" />
                 <br />
                 <br />
                 <label for="phone">Telefon</label>
-                <input id="phone" type="tel" /> <!--  10 digit number-->
-                <br />
-                <br />
-                <label for="gender"> Geschlecht </label>
-                <input id="male" type="radio" name="gender" />
-                <label for="male">Männlich</label>
-                <input id="female" type="radio" name="gender" />
-                <label for="female">Weiblich</label>
+                <input id="phone" type="tel" /> 
                 <br />
                 <br />
                 <label for="address">Adresse</label>
                 <input type="text" /> 
                 <br />
                 <br />
-                <label for="instrument">Instrument</label>
-                <select id="instrument" name="instrument">
-                    <option value="Gitarre">Gitarre</option>
-                    <option value="Klavir">Klavir</option>
-                    <option value="Geige">Geige</option>
-                    <option value="Akkordeon">Akkordeon</option>
-                    <option value="Trompete">Trompete</option>
-                    <option value="Kontrabass">Kontrabass</option>
-                  </select>
-                  <br />
-                  <br />
-                  <label for="uhrzeit">Dauer</label>
-                  <select id="uhrzeit" name="uhrzeit">
-                      <option value="45m">45 Minuten</option>
-                      <option value="60m">60 Minuten</option>
-                      <option value="90m">90 Minuten</option>
-                    </select>
-                    <br />
-                    <br />
 
                 <label for="frage">Weitere Anmerkungen</label>
                 <textarea></textarea>
