--- a/Formula gesang.html
+++ b/Formula gesang.html
@@ -91,9 +91,15 @@
         </div>
     </main>
   
-<footer class="blockLook">
-    <small><a href="impressum.html">Impressum</a> <a href="Datenschutz.html">Datenschutz</a></small>
-</footer>
+    <footer class="blockLook">
+        
+        <div id="text">
+        <p>Tierarzt Praxis Thübingen</p> 
+        <p>Telefon: +49 (0) 123 44 55 66</p>
+        <p>Adresse: Hans-Oster-Straße 15A30502 Tübingen</p>
+        <small><a href="impressum.html">Impressum</a> <a href="Datenschutz.html">Datenschutz</a></small>
+    </div>
+    </footer>
 
 
 
