--- a/Startseite.html
+++ b/Startseite.html
@@ -8,13 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="blockLook">
-        <img id="img" src="images/Geige.png" alt="geige">
+    <header>
+        <div class="img"><img src="images/geige.png" alt="geige"></div>
         <div id="header">
-            <h1>Private Musikschule Tübingen</h1>
+            <h1>Private Musikschule T&uuml;bingen</h1>
         </div>
-        <nav id="menu">
+        <nav class="menu">
             <a href="Startseite.html">Start</a> <a href="Instrumente.html">Instrumente</a> <a href="Unterricht.html">Unterricht</a> <a href="Kontakt.html">Kontakt</a>
+            
         </nav>
     </header>
     <main>
