--- a/Kontakt.html
+++ b/Kontakt.html
@@ -15,15 +15,9 @@
         <div id="header">
             <h1>Private Musikschule T&uuml;bingen</h1>
         </div>
-<<<<<<< HEAD
         <nav id="menu">
-            <a href="Startseite.html">Start</a> <a href="Instrumente.html">Instrumente</a> <a
-                href="Unterricht.html">Unterricht</a> <a href="Kontakt.html">Kontakt</a>
-=======
-        <nav class="menu">
-            <a href="Startseite.html">Start</a> <a href="Instrumente.html">Instrumente</a> <a href="Unterricht.html">Unterricht</a> <a href="Kontakt.html">Kontakt</a>
-            
->>>>>>> affd595a93b3efb2eaf5fdfa1a4990b5735d2973
+            <a href="Startseite.html">Start</a> <a href="Instrumente.html">Instrumente</a> 
+            <a href="Unterricht.html">Unterricht</a> <a href="Kontakt.html">Kontakt</a>
         </nav>
     </header>
     <main class="box">
