--- a/Kontakt.html
+++ b/Kontakt.html
@@ -11,12 +11,13 @@
 
 <body>
     <header>
+        <div class="img"><img src="images/geige.png" alt="geige"></div>
         <div id="header">
             <h1>Private Musikschule T&uuml;bingen</h1>
         </div>
-        <nav id="menu">
-            <a href="Startseite.html">Start</a> <a href="Instrumente.html">Instrumente</a> 
-            <a href="Unterricht.html">Unterricht</a> <a href="Kontakt.html">Kontakt</a>
+        <nav class="menu">
+            <a href="Startseite.html">Start</a> <a href="Instrumente.html">Instrumente</a> <a href="Unterricht.html">Unterricht</a> <a href="Kontakt.html">Kontakt</a>
+            
         </nav>
     </header>
     <main class="box">
