--- a/Kontakt.html
+++ b/Kontakt.html
@@ -20,10 +20,10 @@
     </header>
     <main class="box">
         <div class="box1">
-        <p>Max Mustermann<br />
-        Musterstra&szlig;e 111<br />
-        Geb&auml;ude 44<br />
-        90210 Musterstadt</p>
+        <p>Universitätsstadt Tübingen <br />
+        Tübinger Musikschule<br />
+        Frischlinstraße 4 <br /> 
+        72074 Tübingen</p>
         <p>Telefon: +49 (0) 123 44 55 66<br />
             Telefax: +49 (0) 123 44 55 99<br />
             E-Mail: mustermann@musterfirma.de</p>
