--- a/Startseite.html
+++ b/Startseite.html
@@ -20,25 +20,29 @@
     </header>
     <main>
         <div id="Begrüßung" class="MainLook">
-           <p>Sehr geehrte Damen und Herren. Willkommen in der Musikschule Tuhbingen
-            In unserer Musikschule können Instrumente und Gesangsunttericht buchen.
-            Unser Team besteht aus 15 Mitarbeiter die alle
-            eine Abgeschlossene Musiker Ausbildung haben.
-            Sollten sie noch fragen gaben Rufen sie uns
-             an oder schreiben sie usn eine E-Mail.
-            Wir freuen uns auf sie.
+           <p>Die Tübinger Musikschule bietet Kindern, Jugendlichen und Erwachsenen Unterricht
+            in allen klassischen Instrumenten an: Holz- und Blechbläser, Streich-, Tasten- und 
+            Zupfinstrumente, Schlaginstrumente und Percussion. Ebenso werden die Vokalfächer
+            Sologesang und Jazz- und Pop-Gesang unterrichtet.
+            Das Kursprogramm richtet sich an die Jüngsten und bietet Rhythmik ab einem Jahr, 
+            elementare Musikerziehung, ein Instrumenten-Karussell, Blockflötenkurse, Blechbläser- 
+            und Holzbläservorschulen, Trommeln für Kids und einen Kinderchor.
         </p>
     </div>
         <img id="KlavierKreis" class="blockLook MainLook" style="box-shadow: none;" src="images/Startseite Bild.jpg" alt="">
         <div id="Information" class="MainLook">
             <lo>
                 <h4>Öffnungszeiten:</h4>
-                <li>Montag - Mittwoch 13-18 Uhr</li>
-                <li>Donnerstag- Freitag 15-18 Uhr</li>
+                <li>Montag - Freitag 9.30 bis 12 Uhr</li>
+                <li>Montag - Donnerstag 14.30 bis 16.30 Uhr</li>
             </lo>
+            <br />
+            <br />
             <lo>
                 <h4>Anschrift:</h4>
-                <li>Hans-Oster-Straße 15A</li>
+                <li>Universitätsstadt Tübingen</li>
+                <li>Tübinger Musikschule</li>
+                <li>Frischlinstraße 4</li>
                 <li>30502 Tübingen</li>
             </lo>
            
