--- a/Unterricht.html
+++ b/Unterricht.html
@@ -29,8 +29,8 @@
 
     <main>
        
-  <div id="kinderU" align="center">
-  <h2>Unterricht f&uuml;r Kinder</h2> 
+  <div id="kinderU">
+  <h2>Instrumentaler Unterricht f&uuml;r Kinder</h2> 
   <p class="unterrichtT">Den Einstieg in die Welt der Musik auf spielerische, 
   ganzheitliche Weise erm&ouml;glichen: Das ist das Ziel der Angebote im Elementarbereich. 
   Er umfasst die Fächer &bdquo;Rhythmik in Begleitung&rdquo; ab einem Jahr und &bdquo;Elementare Musikerziehung&rdquo; f&uuml;r Kinder, 
@@ -50,8 +50,8 @@
   
   </div>
   
-  <div id="erwachsenU" align="center">
-  <h2>Unterricht f&uuml;r Erwachsene</h2>
+  <div id="erwachsenU">
+  <h2>Instrumentaler Unterricht f&uuml;r Erwachsene</h2>
   <p class="unterrichtT">Musizieren auch im Erwachsenenalter oder als Senior &ndash; das bringt Lebensqualität und Freude. 
   An der T&uuml;binger Musikschule lässt sich dieser lang gehegte Traum erf&uuml;llen. 
   Erwachsene erhalten modernen und individuell auf ihre Bed&uuml;rfnisse zugeschnittenen Instrumentalunterricht.
@@ -72,7 +72,7 @@
   
   </div>
   
-  <div id="gesangU"  align="center">
+  <div id="gesangU">
   <h2>Gesangsunterricht</h2>
   <p>Singen ist eine erf&uuml;llende Tätigkeit. Sch&ouml;n singen kann man gr&ouml;&szlig;tenteils lernen &ndash; auch, 
   wie man mit dem K&ouml;rper und der Atmung umgeht. Sogar eine scheinbar schwache oder heisere Stimme 
