--- a/Insturment Klavir.html
+++ b/Insturment Klavir.html
@@ -60,25 +60,13 @@
         </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
     </main>
     <footer class="blockLook">
         
         <div id="text">
-        <p>Tierarzt Praxis Thübingen</p> 
-        <p>Telefon: +49 (0) 123 44 55 66</p>
-        <p>Adresse: Hans-Oster-Straße 15A30502 Tübingen</p>
+        <p>Private Musikschule T&uuml;bingen</p> 
+        <p>Telefon: 07071 2046100</p>
+        <p>Adresse: Frischlinstraße 4, 72074 Tübingen</p>
         <small><a href="impressum.html">Impressum</a> <a href="Datenschutz.html">Datenschutz</a></small>
     </div>
     </footer>
