--- a/Instrumente.html
+++ b/Instrumente.html
@@ -72,9 +72,9 @@
     <footer class="blockLook">
         
         <div id="text">
-        <p>Private Musikschule T&uuml;bingen</p> 
-        <p>Telefon: 07071 2046100</p>
-        <p>Adresse: Frischlinstraße 4, 72074 Tübingen</p>
+            <p> Musikschule T&uuml;bingen</p>  
+            <p>Telefon: 07071 2046100</p>
+            <p>Adresse: Frischlinstraße 4, 72074 Tübingen</p>
         <small><a href="impressum.html">Impressum</a> <a href="Datenschutz.html">Datenschutz</a></small>
     </div>
     </footer>
