--- a/Instrument Kontrabass.html
+++ b/Instrument Kontrabass.html
@@ -63,9 +63,9 @@
     <footer class="blockLook">
         
         <div id="text">
-            <p> Musikschule T&uuml;bingen</p>  
-            <p>Telefon: 07071 2046100</p>
-            <p>Adresse: Frischlinstraße 4, 72074 Tübingen</p>
+        <p>Private Musikschule T&uuml;bingen</p> 
+        <p>Telefon: 07071 2046100</p>
+        <p>Adresse: Frischlinstraße 4, 72074 Tübingen</p>
         <small><a href="impressum.html">Impressum</a> <a href="Datenschutz.html">Datenschutz</a></small>
     </div>
     </footer>
