--- a/Kontakt.html
+++ b/Kontakt.html
@@ -28,7 +28,7 @@
         72074 Tübingen</p>
         <p>Telefon: 07071 2046100<br />
             Telefax: +49 (0) 123 44 55 99<br />
-            E-Mail: mustermann@musterfirma.de</p>
+            E-Mail: musikschule@tuebingen.de</p>
             <a class="Ubutton" href="Formula kontakt.html"><b>Weitere Fragen</b></a>
         </div>
         <div class="box2">
