--- a/Formula kinder.html
+++ b/Formula kinder.html
@@ -24,7 +24,7 @@
     </header>
     <main>
         <div id="form" class="blockLook">
-            <h2> Anmeldung für den Instromentalunterricht</h2>
+            <h2> Anmeldung für den Instrumentalunterricht</h2>
             <form action="mailto:...">
                 <label for="first">Vorname</label>
                 <input id="first" type="text" />
