--- a/Formula.html
+++ b/Formula.html
@@ -34,7 +34,7 @@
                 <input id="last" type="text" />
                 <br />
                 <br />
-                <label for="birthday">Gegurtsdatum</label>
+                <label for="birthday">Geburtsdatum</label>
                 <input id="birthday" type="date" />
                 <br />
                 <br />
@@ -43,7 +43,7 @@
                 <br />
                 <br />
                 <label for="phone">Telefon</label>
-                <input id="phone" type="tel" /> <!--  10 digit number-->
+                <input id="phone" type="tel" /> 
                 <br />
                 <br />
                 <label for="gender"> Geschlecht </label>
