--- a/Kontakt.html
+++ b/Kontakt.html
@@ -27,7 +27,7 @@
         Frischlinstraße 4 <br /> 
         72074 Tübingen</p>
         <p>Telefon: 07071 2046100<br />
-            Telefax: +49 (0) 123 44 55 99<br />
+            Telefax: 07071 204-46100<br />
             E-Mail: musikschule@tuebingen.de</p>
             <a class="Ubutton" href="Formula kontakt.html"><b>Weitere Fragen</b></a>
         </div>
