--- a/Instrument Geige.html
+++ b/Instrument Geige.html
@@ -29,7 +29,7 @@
     <main>
         <nav class="menulinks">
             <a href="Instrumente.html">Gitarre</a> <br />  <br /> <br />
-            <a href="Insturment Klavir.html">Klavir</a> <br /> <br /> <br />
+            <a href="Insturment Klavir.html">Klavier</a> <br /> <br /> <br />
             <a href="Instrument Geige.html">Geige</a>  <br /> <br /> <br />
             <a href="Instrument Akkordeon.html">Akkordeon</a> <br />  <br /> <br />
             <a href="Instrument Trompete.html">Trompete</a>   <br /> <br /> <br />
