--- a/Startseite.html
+++ b/Startseite.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <main>
-        <div id="Begrüßung" class="MainLook">
+        <div id="Begrüßung">
            <p>Die Tübinger Musikschule bietet Kindern, Jugendlichen und Erwachsenen Unterricht
             in allen klassischen Instrumenten an: Holz- und Blechbläser, Streich-, Tasten- und 
             Zupfinstrumente, Schlaginstrumente und Percussion. Ebenso werden die Vokalfächer
