--- a/Instrumente.html
+++ b/Instrumente.html
@@ -8,7 +8,7 @@
      <link href="instrumente.css" type="text/css" rel="stylesheet">
      
      
-    <title>Instrumente</title>
+    <title>Instrumenten</title>
 
 </head>
 <body>
